--- a/backend/videoGen/requirements.txt
+++ b/backend/videoGen/requirements.txt
@@ -9,6 +9,7 @@ Cython==3.0.10
 decorator==4.4.2
 distro==1.9.0
 dtw-python==1.5.1
+elevenlabs==0.2.27
 edge-tts==6.1.12
 filelock==3.14.0
 frozenlist==1.4.1
