--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -4,7 +4,7 @@
     "description": "AI generated doom scrolling.",
     "icons": [
         {
-            "src": "flower-pink.png",
+            "src": "favicon.png",
             "sizes": "512x512",
             "type": "image/png"
         }
